[package]
name = "xuid"
version = "1.0.1"
edition = "2021"
authors = ["theaddonn <theaddonn@gmail.com>"]
readme = "README.md"
description = "XUID library in Rust"
repository = "https://github.com/theaddonn/xuid"
license = "Apache-2.0"
keywords = ["xuid", "xbox"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[[example]]
name = "simple"
